# fileserver-task

./: .gitignore  CMakeLists.txt  task.md
libs/cppformat/: CMakeLists.txt
libs/spdlog/: CMakeLists.txt
libs/spdlog/cxxopts/: CMakeLists.txt
libs/spdlog/include/spdlog/details/: async_log_helper.h  log_msg.h
libs/spdlog/include/spdlog/sinks/: file_sinks.h
tests/: CMakeLists.txt
